# OpenVROverlay_imgui

./: CMakeLists.txt
OpenVROverlay_imgui/: CMakeLists.txt  OpenVROverlay_imgui.cpp  OpenVROverlay_imgui.vcxproj
desktop/: CMakeLists.txt  main.cpp  overlay.cpp  overlay.h  windowswindow.cpp
minoverlay/: CMakeLists.txt  d3dmanager.cpp  d3dmanager.h  main.cpp  overlay.cpp  overlay.h  windowswindow.cpp  windowswindow.h
